--- a/src/components/breakdown/breakdown.css
+++ b/src/components/breakdown/breakdown.css
@@ -1,7 +1,6 @@
 .blue-box-breakdown {
   height: 80%;
-  background: var(--color-secondary);
-  border-radius: 20px;
+  border-radius: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -26,7 +25,7 @@
 .blue-box-breakdown img {
   width: 70%;
   height: auto;
-  border-radius: 20px;
+  border-radius: 30px;
   border: 5px solid var(--color-primary);
 }
 
@@ -83,5 +82,10 @@
 @media only screen and (max-width: 650px) {
   .list li {
     font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .list li {
+    font-size: 0.8rem;
   }
 }
