--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,30 @@ html {
   display: none;
 }
 
+.gradient-class {
+  background: hsla(203, 28%, 87%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(203, 28%, 87%, 1) 0%,
+    hsla(216, 41%, 79%, 1) 67%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(203, 28%, 87%, 1) 0%,
+    hsla(216, 41%, 79%, 1) 67%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(203, 28%, 87%, 1) 0%,
+    hsla(216, 41%, 79%, 1) 67%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#D6E1E8", endColorstr="#B5C6E0", GradientType=1 );
+}
+
 body {
   font-family: "Source Sans Pro", sans-serif;
   background: -webkit-gradient(
